# robot-sim-tutorial

./: .gitattributes  .gitignore  config  deps-jazzy.sh  deps.sh  download.me  ros-humble.sh  ros-jazzy.sh  simplest
docker/: .gitignore  Dockerfile.ros  Dockerfile.ros.humble  Dockerfile.ros.humble.all  Dockerfile.ros.src  all  build-humble-all.sh  noros.bashrc.in  ros.bashrc.in
lab0_helloworld/: CMakeLists.txt  node_demo.cpp  node_demo.py
lab0_ros_pkg/: create_pkg.sh
lab1_ros_pubsub/turtle_pd/: CMakeLists.txt  package.xml
lab1_ros_pubsub/turtle_pd/src/: patrol_client.cpp  turtle_controller.cpp
lab1_ros_pubsub/turtle_pd_if/: CMakeLists.txt  package.xml
lab1_ros_pubsub/turtle_pd_if/srv/: Patrol.srv  PatrolStatus.srv
lab2_ros_svc/: requirements-dev.txt  turtlesim.config.yaml
lab2_ros_svc/obj_det_client/: package.xml  setup.cfg  setup.py
lab2_ros_svc/obj_det_client/obj_det_client/: client.py
lab2_ros_svc/obj_detector_if/: CMakeLists.txt  package.xml
lab2_ros_svc/obj_detector_if/srv/: ObjectDetection.srv
lab2_ros_svc/object_detector/: package.xml  setup.py
lab2_ros_svc/object_detector/object_detector/: obj_detector.py
lab3_opt_display/sys_stat_display/: CMakeLists.txt  package.xml
lab3_opt_display/sys_stat_display/src/: main_window.cpp  main_window.h  stat_display.cpp
lab3_opt_display/sys_stat_display/ui/: main_window.ui
lab3_opt_display/sys_stat_if/: CMakeLists.txt  package.xml
lab3_opt_display/sys_stat_if/msg/: SystemStat.msg
lab3_opt_display/sys_stat_probe/: package.xml  setup.cfg  setup.py
lab3_opt_display/sys_stat_probe/sys_stat_probe/: probe.py
lab5_gz_sim/: test.mjcf  test.urdf
lab5_gz_sim/robot-desc/: CMakeLists.txt  package.xml
lab5_gz_sim/robot-desc/config/: gz_bridge.yaml  my_robot.rviz  ros2_controller.yaml
lab5_gz_sim/robot-desc/launch/: robot-desc.launch.py  sim.launch.py
lab5_gz_sim/robot-desc/urdf/: base.urdf.xacro  common_inertia.xacro  robot.ros2_control.xacro  robot.urdf.xacro
lab5_gz_sim/robot-desc/urdf.old/: my_robot.urdf  my_robot.xacro
lab5_gz_sim/robot-desc/urdf/actuator/: caster.urdf.xacro  wheel.urdf.xacro
lab5_gz_sim/robot-desc/urdf/plugins/: gazebo_control_plugin.xacro  gazebo_sensor_plugin.xacro
lab5_gz_sim/robot-desc/urdf/sensors/: camera.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
lab5_gz_sim/robot-desc/world/: custom_room.world
lab5_gz_sim/robot-nav2/: CMakeLists.txt  package.xml
lab5_gz_sim/robot-nav2/config/: nav2_params.jazzy.yaml
lab5_gz_sim/robot-nav2/launch/: nav2.launch.py
robot_sim_sample/frontend/: .gitignore  README.md  build-profile.json5  local.properties
robot_sim_sample/frontend/AppScope/: app.json5
robot_sim_sample/frontend/entry/: build-profile.json5
robot_sim_sample/frontend/entry/src/main/: module.json5
robot_sim_sample/frontend/entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  utils.h
robot_sim_sample/frontend/entry/src/main/cpp/types/libentry/: Index.d.ts  oh-package.json5
robot_sim_sample/simulator/: .gitignore  README.md  use-jazzy.sh
robot_sim_sample/simulator/mujoco_ros2_control/mujoco_ros2_control/: CMakeLists.txt  package.xml
robot_sim_sample/simulator/mujoco_ros2_control/mujoco_ros2_control/src/: mujoco_rendering.cpp  mujoco_ros2_control.cpp  mujoco_ros2_control_node.cpp  mujoco_ros2_control_node.cpp.runnable
robot_sim_sample/simulator/oh_agent/: package.xml  req.txt  setup.cfg  setup.py
robot_sim_sample/simulator/oh_agent/oh_agent/common/: config.py  prompts.py
robot_sim_sample/simulator/oh_agent/oh_agent/py_agent/: robot_agent.py
robot_sim_sample/simulator/oh_agent/oh_agent/servers/: demo.py  external_control.py  pool.py  robot_mcp_server.py  simulator.py  utils.py
robot_sim_sample/simulator/oh_agent/oh_agent/test/: test_yolo.py
robot_sim_sample/simulator/oh_servo/: package.xml  setup.cfg  setup.py
robot_sim_sample/simulator/oh_servo/oh_servo/: servo_grpc_server.py
robot_sim_sample/simulator/oh_servo/test/: test_client.py
robot_sim_sample/simulator/oh_servo_cpp/: CMakeLists.txt  package.xml
robot_sim_sample/simulator/oh_servo_cpp/include/oh_servo/: keyboard_servo.hpp  servo_controller.hpp
robot_sim_sample/simulator/oh_servo_cpp/src/: keyboard_servo.cpp  keyboard_servo_demo.cpp  servo_controller.cpp
robot_sim_sample/simulator/panda_resources/panda_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
robot_sim_sample/simulator/panda_resources/panda_moveit_config/: .setup_assistant  CHANGELOG.rst  CMakeLists.txt  package.xml
robot_sim_sample/simulator/robot_sim/: .gitignore  Makefile  README.md
robot_sim_sample/simulator/robot_sim/controllers/moveit2c/: CMakeLists.txt  package.xml
robot_sim_sample/simulator/robot_sim/controllers/moveit2c/src/: arm_keyboard_teleop.cpp  car_arm_controller.cpp  test_jog.cpp
robot_sim_sample/simulator/robot_sim/demos/: package.xml  setup.py
robot_sim_sample/simulator/robot_sim/display_helpers/: CMakeLists.txt  package.xml
robot_sim_sample/simulator/robot_sim/docker/: ros-desktop.sh
robot_sim_sample/simulator/robot_sim/interfaces/: CMakeLists.txt  package.xml
robot_sim_sample/simulator/robot_sim/interfaces/srv/: GetPose2D.srv  MoveArm.srv
robot_sim_sample/simulator/servo2c/: CMakeLists.txt  package.xml
robot_sim_sample/simulator/servo2c/config/: servo_ipads_left_config.yaml  servo_ipads_right_config.yaml
robot_sim_sample/simulator/servo2c/include/servo2c/: demo
robot_sim_sample/simulator/servo2c/launch/: mtc_demo.launch.py  mtc_run.launch.py  mtc_stub_start.launch.py  servo_demo.launch.py  servo_ipads.launch.py
robot_sim_sample/simulator/servo2c/src/: joystick_servo_controller.cpp  mtc_node.cpp  servo_controller.cpp
robot_sim_sample/simulator/servo_control_stubs/: package.xml  setup.cfg  setup.py
robot_sim_sample/simulator/servo_control_stubs/servo_control_stubs/: servo_control.proto  servo_control_pb2.py  servo_control_pb2.pyi  servo_control_pb2_grpc.py
robot_sim_sample/simulator/sim_rec/: package.xml  setup.cfg  setup.py
robot_sim_sample/simulator/sim_rec/sim_rec/: plot.py  recorder.py  train.py
(+98 files in other folders)
